--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vueuse/head": "^1.1.15",
     "axios": "^1.3.4",
     "jsdom": "^21.1.0",
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
@@ -44,6 +45,7 @@
     "@iconify-json/carbon": "^1.1.16",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@ls-lint/ls-lint": "^1.11.2",
+    "@types/lodash-es": "^4.17.10",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.3.0",
