--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "axios": "^1.3.4",
     "jsdom": "^21.1.0",
     "lodash-es": "^4.17.21",
+    "lodash-unified": "^1.0.3",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.32",
-    "vue": "^3.2.47",
+    "vue": "^3.3.8",
     "vue-demi": "^0.13.11",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6"
