--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash-unified": "^1.0.3",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.32",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.3.8",
     "vue-demi": "^0.13.11",
     "vue-i18n": "^9.2.2",
